--- a/readme
+++ b/readme
@@ -3,7 +3,7 @@ The folder contains:
     results folder contains my results(sample.table.txt and sample.reverse.txt)    
     input file: sample.txt
 
-    main.cpp file tests two classes 
+    main.cpp file: to test two classes 
     
     textOccurence.cpp file implements the the class textOccurence
     textOccurence.h is the  textOccurence class header
